[b]Version 0.6.2[/b]:

(2008-06-03)
 * Added the possibility to compile smplayer in Windows without the
   file associations code, so it doesn't write anything in the 
   registry (important for a portable app). Just comment the line
   DEFINES += USE_ASSOCIATIONS in smplayer.pro.
 * Another fix for Qt 4.4. The language toolbar wasn't restored
   properly.
 * More work to make smplayer a better portable application (although most of
   the following work on linux, it's intended for windows). If PORTABLE_APP 
   is defined (it can be done with 'qmake DEFINES+=PORTABLE_APP') then:
    - it will use by default the application directory for the ini files
    - it won't try to create the smplayer home directory or the screenshot
      directory ($HOME/.smplayer and $HOME/.smplayer/screenshots)
    - by default the path for the screenshots is empty
    - under windows the associations code won't be compiled, so smplayer won't
      write anything in the windows registry.
   
(2008-06-02)
 * Now the controlbar and floating control in the minigui can be 
   configured too.
 * Some minor (and internal) changes:
    - the playlist doesn't save its size as that is already done by 
      QMainWindow::saveState()
    - sizes and positions are saved to the config file as QSize's and
      QPoint's

(2008-06-01)
 * (Bugfix) The "modify shortcut" dialog was under the other windows if
   the option Video -> Stay on top was enabled.
 * Started to write the code to make the toolbars configurable:
    - the list of actions in a widget can be saved to the config file
    - a widget can be populated with the actions read from the config file 
    - as a test the toolbar1, controlwidget and controlwidget_mini in 
      defaultgui are saved to the config and loaded on startup

(2008-05-30)
 * The maximum port for the single instance is 65535, instead of 99999.
 * Added a new option in guiconfig.h, USE_MINIMUMSIZE. If set to 1